General cleanup of the text. Working through chapter by chapter, just finished chapter 1.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -213,7 +213,7 @@ Original version: \the\year\ \thanklessauthor
 \begin{doublespace}
 \noindent\fontsize{18}{22}\selectfont\itshape
 \nohyphenation
-Dedicated to my son, Ethan Anderson-Krumholz, to my wife, Rebecca Anderson, and to my students, who have contributed tremendously to the development of this book.
+Dedicated to Ethan Anderson-Krumholz and Rebecca Anderson, and with thanks to my students, who have contributed tremendously to the development of this book.
 \end{doublespace}
 \vfill
 \vfill
@@ -225,68 +225,13 @@ Dedicated to my son, Ethan Anderson-Krumholz, to my wife, Rebecca Anderson, and 
 \cleardoublepage
 \chapter*{Introduction} % The asterisk leaves out this chapter from the table of contents
 
-This book is based on a series of lectures given by the author in his graduate class on star formation, taught from 2009 - 2014 at UC Santa Cruz. It is intended for graduate students or advanced undergraduates in astronomy or physics, but does not presume detailed knowledge of particular areas of astrophysics (e.g., the interstellar medium or galactic structure). It is intended to provide a general overview of the field of star formation, at a level that would enable a student to begin independent research in the area.
+This book is based on a series of lectures given by the author in his graduate class on star formation, taught from 2009 - 2016 at the University of California, Santa Cruz and Australian National University. It is intended for graduate students or advanced undergraduates in astronomy or physics, but does not presume detailed knowledge of particular areas of astrophysics (e.g., the interstellar medium or galactic structure). It is intended to provide a general overview of the field of star formation, at a level that would enable a student to begin independent research in the area.
 
-This course covers the basics of star formation and ending at the transition to planet formation. The structure of the course / book is as follows. Each chapter corresponds roughly to a single lecture. The first two chapters begin with a discussion of observational techniques, and the basic phenomenology they reveal. The goal is to familiarize students with the basic techniques that will be used throughout, and to provide a common vocabulary for the rest of the course. The next five chapters provide a similar review of the basic physical processes that are important for star formation. Again, the goal is to provide a basis for what follows. The remaining chapters discuss star formation over a variety of scales, starting with the galactic scale and working our way down to the scales of individual stars and their disks. The course concludes with the clearing of disks and the transition to planet formation.
+This course covers the basics of star formation and ending at the transition to planet formation. The structure of the course / book is as follows. Each chapter corresponds roughly to a single lecture. The first two chapters begin with a discussion of observational techniques, and the basic phenomenology they reveal. The goal is to familiarize students with the basic techniques that will be used throughout, and to provide a common vocabulary for the rest of the course. The next five chapters provide a similar review of the basic physical processes that are important for star formation. Again, the goal is to provide a basis for what follows. The remaining chapters discuss star formation over a variety of scales, starting with the galactic scale and working our way down to the scales of individual stars and their disks, with slight deviations to discuss the particular problems of the formation of massive stars and of the first stars. The course concludes with the clearing of disks and the transition to planet formation.
 
-The "texts" intended to go with these notes are the review articles "\href{http://adsabs.harvard.edu/abs/2014arXiv1402.0867K}{The Big Problems in Star Formation: the Star Formation Rate, Stellar Clustering, and the Initial Mass Function}", Krumholz, M. R., 2014, \textit{Physics Reports}, 539, 49, which provides a snapshot of the theoretical literature as of the most recent time the course was given, and "\href{http://adsabs.harvard.edu/abs/2012ARA\%26A..50..531K}{Star Formation in the Milky Way and Nearby Galaxies}", Kennicutt, R.~C., \& Evans, N.~J., 2012, \textit{Annual Reviews of Astronomy \& Astrophysics}, 50, 531, which is more focused on observations. Another extremely useful reference is the series of review chapters from the \href{http://www.mpia.de/homes/ppvi/}{Protostars and Planets VI Conference}, which took place in July 2013. Suggested background readings to accompany most chapters are listed at the chapter beginning. In addition to these background materials, most chapters also include "suggested literature": papers from the recent literature whose content is relevant to the material covered in that chapter. These readings are included to help students engage with the active research literature, as well as the more general reviews.
+The "texts" intended to go with these notes are the review articles "\href{http://adsabs.harvard.edu/abs/2014PhR...539...49K}{The Big Problems in Star Formation: the Star Formation Rate, Stellar Clustering, and the Initial Mass Function}", Krumholz, M. R., 2014, \textit{Physics Reports}, 539, 49, which provides a snapshot of the theoretical literature as of the most recent time the course was given, and "\href{http://adsabs.harvard.edu/abs/2012ARA\%26A..50..531K}{Star Formation in the Milky Way and Nearby Galaxies}", Kennicutt, R.~C., \& Evans, N.~J., 2012, \textit{Annual Reviews of Astronomy \& Astrophysics}, 50, 531, which is more focused on observations. Another extremely useful reference is the series of review chapters from the \href{http://www.mpia.de/homes/ppvi/}{Protostars and Planets VI Conference}, which took place in July 2013. Suggested background readings to accompany most chapters are listed at the chapter beginning. In addition to these background materials, most chapters also include "suggested literature": papers from the recent literature whose content is relevant to the material covered in that chapter. These readings are included to help students engage with the active research literature, as well as the more general reviews.
 
 In addition to the text and reading, this book contains five problem sets, which are interspersed with the chapters at appropriate locations. Solutions to the problems are included as an Appendix.
-
-%Citation example \cite{Tufte2001}, notice how the citation is in the margin. This is an example of how to add something to the index at the end of the document.\index{citation}
-
-%\newthought{Example of} the \texttt{newthought} command for starting new sections. Typography examples: \allcaps{all caps} and \smallcaps{small caps}.
-
-%------------------------------------------------
-
-%\section{Figures}
-
-%\lipsum[1] 
-
-%\begin{marginfigure}
-%\includegraphics[width=\linewidth]{helix}
-%\caption{This is a margin figure. The helix is defined by $x = \cos(2\pi z)$, $y = \sin(2\pi z)$, and $z = [0, 2.7]$. The figure was drawn using Asymptote (\url{http://asymptote.sf.net/}).}
-%\label{fig:marginfig}
-%\end{marginfigure}
-
-%\lipsum[2]
-
-%\begin{figure*}[h]
-%\includegraphics[width=\linewidth]{sine.pdf}
-%\caption{This graph shows $y = \sin x$ from about $x = [-10, 10]$.
-%\emph{Notice that this figure takes up the full page width.}}
-%\label{fig:fullfig}
-%\end{figure*}
-
-%\lipsum[3]
-
-%------------------------------------------------
-
-%\section{Tables} \marginnote{This is a random margin note. Notice that there isn't a number preceding the note, and there is no number in the main text where this note was written. Use \texttt{sidenote} to use a number.}
-
-%\lipsum[4]
-
-%\begin{table} % Add the following just after the closing bracket on this line to specify a position for the table on the page: [h], [t], [b] or [p] - these mean: here, top, bottom and on a separate page, respectively
-%\centering % Centers the table on the page, comment out to left-justify
-%\begin{tabular}{l c c c c c} % The final bracket specifies the number of columns in the table along with left and right borders which are specified using vertical bars (|); each column can be left, right or center-justified using l, r or c. To specify a precise width, use p{width}, e.g. p{5cm}
-%\toprule % Top horizontal line
-%& \multicolumn{5}{c}{Growth Media} \\ % Amalgamating several columns into one cell is done using the \multicolumn command as seen on this line
-%\cmidrule(l){2-6} % Horizontal line spanning less than the full width of the table - you can add (r) or (l) just before the opening curly bracket to shorten the rule on the left or right side
-%Strain & 1 & 2 & 3 & 4 & 5\\ % Column names row
-%\midrule % In-table horizontal line
-%GDS1002 & 0.962 & 0.821 & 0.356 & 0.682 & 0.801\\ % Content row 1
-%NWN652 & 0.981 & 0.891 & 0.527 & 0.574 & 0.984\\ % Content row 2
-%PPD234 & 0.915 & 0.936 & 0.491 & 0.276 & 0.965\\ % Content row 3
-%JSB126 & 0.828 & 0.827 & 0.528 & 0.518 & 0.926\\ % Content row 4
-%JSB724 & 0.916 & 0.933 & 0.482 & 0.644 & 0.937\\ % Content row 5
-%\midrule % In-table horizontal line
-%\midrule % In-table horizontal line
-%Average Rate & 0.920 & 0.882 & 0.477 & 0.539 & 0.923\\ % Summary/total row
-%\bottomrule % Bottom horizontal line
-%\end{tabular}
-%\caption{Table caption text} % Table caption, can be commented out if no caption is required
-%\label{tab:template} % A label for referencing this table elsewhere, references are used in text as \ref{label}
-%\end{table}
 
 %----------------------------------------------------------------------------------------
 
@@ -299,8 +244,6 @@ In addition to the text and reading, this book contains five problem sets, which
 %	CHAPTERS AND PROBLEM SETS
 %----------------------------------------------------------------------------------------
 
-%\chapter{Chapter 1 Title}
-%\label{ch:1}
 \part{Introduction and Phenomenology}
 
 \input{chapters/chapter1.tex}
@@ -357,7 +300,6 @@ In addition to the text and reading, this book contains five problem sets, which
 %----------------------------------------------------------------------------------------
 
 \bibliography{bib/refs} % Use the bibliography.bib file for the bibliography
-%\bibliographystyle{plainnat} % Use the plainnat style of referencing
 \bibliographystyle{apj}
 
 %----------------------------------------------------------------------------------------
