Added an appendix giving the generalization of non-LTE level populations to species with arbitrary numbers of levels.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -281,6 +281,8 @@ In addition to the text and reading, this book contains five problem sets, which
 
 \appendix
 
+\input{chapters/appendix_a.tex}
+
 %----------------------------------------------------------------------------------------
 %	PROBLEM SET SOLUTIONS
 %----------------------------------------------------------------------------------------
