Problem set 1 slight modifications.

--- a/problems/probset1.tex
+++ b/problems/probset1.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
 
 \item \textbf{Molecular Tracers.}\\
-Here we will derive a definition of the critical density, and use it to compute some critical densities for important molecular transitions. For the purposes of this problem, you will need to know some basic parameters (such as energy levels and Einstein coefficients) of common interstellar molecules. You can obtain these from the Leiden Atomic and Molecular Database (LAMDA, \url{http://www.strw.leidenuniv.nl/~moldata}). It's also worth taking a quick look through the associated paper \citep{schoier05a}\footnote{\href{http://adsabs.harvard.edu/abs/2005A\%26A...432..369S}{Sch\"{o}ier {\it et.~al}, 2005, A\&A, 432, 369}} so you get a feel for where these numbers come from.
+Here we will derive a definition of the critical density, and use it to compute some critical densities for important molecular transitions. For the purposes of this problem, you will need to know some basic parameters (such as energy levels and Einstein coefficients) of common interstellar molecules. You can obtain these from the Leiden Atomic and Molecular Database (LAMDA, \url{http://www.strw.leidenuniv.nl/~moldata}). It is also worth taking a quick look through the associated paper \citep{schoier05a}\footnote{\href{http://adsabs.harvard.edu/abs/2005A\%26A...432..369S}{Sch\"{o}ier {\it et.~al}, 2005, A\&A, 432, 369}} so you get a feel for where these numbers come from.
 \begin{enumerate}
 \item Consider an excited state $i$ of some molecule, and let $A_{ij}$ and $k_{ij}$ be the Einstein $A$ coefficient and the collision rate, respectively, for transitions from state $i$ to state $j$. Write down expressions for the rates of radiative and collisional de-excitations out of state $i$ in a gas where the number density of collision partners is $n$.
 \item We define the critical density $n_{\rm crit}$ of a state as the density for which the radiative and collisional de-excitation rates are equal.\footnote{There is some ambiguity in this definition. Some people define the critical density as the density for which the rate of radiative de-excitation equals the rate of {\it all} collisional transitions out of a state, not just the rate of collisional de-excitations out of it. In practice this usually makes little difference.} Using your answer to the previous part, derive an expression for $n_{\rm crit}$ in terms of the Einstein coefficient and collision rates for the state. 
@@ -16,7 +16,7 @@ Here we will derive a definition of the critical density, and use it to compute 
 \item \textbf{Infrared Luminosity as a Star Formation Rate Tracer.}\\
 We use a variety of indirect indicators to measure the star formation rate in galaxies, and one of the most common is to measure the galaxy's infrared luminosity. The underlying assumptions behind this method are that (1) most of the total radiant output in the galaxy comes from young, recently formed stars, and (2) that in a sufficiently dusty galaxy most of the starlight will be absorbed by dust grains within the galaxy and then re-radiated in the infrared. We will explore how well this conversion works using the popular stellar population synthesis package Starburst99 \citep{leitherer99a, vazquez05a}, \url{http://www.stsci.edu/~science/starburst99}.
 \begin{enumerate}
-\item Once you've read enough of the papers to figure out what Starburst99 does, use it with the default parameters to compute the total luminosity of a stellar population in which star formation occurs continuously at a fixed rate $\dot{M}_*$. What is the ratio of $L_{\rm tot}/\dot{M}_*$ after 10 Myr? After 100 Myr? After 1 Gyr? Compare these ratios to the conversion factor between $L_{\rm TIR}$ and $\dot{M}_*$ given in Table 1 of \citet{kennicutt12a}\footnote{\href{http://adsabs.harvard.edu/abs/2012ARA\%26A..50..531K}{Kennicutt \& Evans, 2012, ARA\&A, 50, 531}}.
+\item Once you have read enough of the papers to figure out what Starburst99 does, use it with the default parameters to compute the total luminosity of a stellar population in which star formation occurs continuously at a fixed rate $\dot{M}_*$. What is the ratio of $L_{\rm tot}/\dot{M}_*$ after 10 Myr? After 100 Myr? After 1 Gyr? Compare these ratios to the conversion factor between $L_{\rm TIR}$ and $\dot{M}_*$ given in Table 1 of \citet{kennicutt12a}\footnote{\href{http://adsabs.harvard.edu/abs/2012ARA\%26A..50..531K}{Kennicutt \& Evans, 2012, ARA\&A, 50, 531}}.
 \item Plot $L_{\rm tot}/\dot{M}_*$ as a function of time for this population. Based on this plot, how old does a stellar population have to be before $L_{\rm TIR}$ becomes a good tracer of the total star formation rate?
 \item Try making the IMF slightly top-heavy, by removing all stars below $0.5$ $\msun$. How much does the luminosity change for a fixed star formation rate? What do you infer from this about how sensitive this technique is to assumptions about the form of the IMF?
 \end{enumerate}
