Minor updates to bibtex database, acknowledgements.

--- a/sfnotes.tex
+++ b/sfnotes.tex
@@ -213,7 +213,7 @@ Original version: \the\year\ \thanklessauthor
 \begin{doublespace}
 \noindent\fontsize{18}{22}\selectfont\itshape
 \nohyphenation
-Dedicated to Ethan Anderson-Krumholz and Rebecca Anderson, and with thanks to my students, who have contributed tremendously to the development of this book.
+Dedicated to my family, Barbara, Alan, Ethan, and Rebecca, and with thanks to my students, who have contributed tremendously to the development of this book.
 \end{doublespace}
 \vfill
 \vfill
