Revisions complete through chapter 13.

--- a/problems/probset3.tex
+++ b/problems/probset3.tex
@@ -3,16 +3,16 @@
 \begin{enumerate}
 
 \item \textbf{Toomre Instability.}\\
-Chapter \ref{ch:sflaw_th} discusses the Toomre instability as a potentially important factor in driving star formation. It may also be relevant to determining the maximum masses of molecular clouds. Here we will derive the instability. We will consider a uniform infinitely thin disk of surface density $\Sigma$ occupying the $z=0$ plane. The disk has a flat rotation curve with velocity $v_R$, so the angular velocity is $\veco=\Omega \ehat_z$, with $\Omega = v_R/r$ at a distance $r$ from the disk center. The velocity of the fluid in the $z=0$ plane is $\vecv$ and its vertically-integrated pressure is $\Pi=\int_{-\infty}^{\infty} P \, dz = \Sigma c_s^2$. 
+Chapter \ref{ch:sflaw_th} discusses the Toomre instability as a potentially important factor in driving star formation. It may also be relevant to determining the maximum masses of molecular clouds. In this problem we will calculate the stability condition and related quantities. Consider a uniform, infinitely thin disk of surface density $\Sigma$ occupying the $z=0$ plane. The disk has a flat rotation curve with velocity $v_R$, so the angular velocity is $\veco=\Omega \ehat_z$, with $\Omega = v_R/r$ at a distance $r$ from the disk center. The velocity of the fluid in the $z=0$ plane is $\vecv$ and its vertically-integrated pressure is $\Pi=\int_{-\infty}^{\infty} P \, dz = \Sigma c_s^2$. 
 \begin{enumerate}
-\item Consider a coordinate system co-rotating with the disk, centered at a distance $R$ from the disk center, oriented so that the $x$ direction is radially outward and the $y$ direction is in the direction of rotation. In this frame, we can derive the governing equations by combining the vertically-integrated equations of motion with the Poisson equation. This gives
+\item Consider a coordinate system co-rotating with the disk, centered at a distance $R$ from the disk center, oriented so that the $x$ direction is radially outward and the $y$ direction is in the direction of rotation. In this frame, the vertically-integrated equations of motion and the Poisson equation are
 \begin{eqnarray*}
 \frac{\partial \Sigma}{\partial t} + \nabla \cdot (\Sigma \vecv) & = & 0 \\
 \frac{\partial \vecv}{\partial t} + (\vecv\cdot\nabla)\vecv & = & -\frac{\nabla \Pi}{\Sigma} - \nabla \phi - 2\veco \times \vecv + \Omega^2 (x \ehat_x + y \ehat_y) \\
 \nabla^2 \phi & = & 4 \pi G \Sigma \delta(z).
 \end{eqnarray*}
 The last two terms in the second equation are the Coriolis and centrifugal force terms.
-We wish to perform a stability analysis of these equations. Consider a solution $(\Sigma_0, \phi_0)$ to these equations in which the gas is in equilibrium (i.e.\ $\vecv=0$), and add a small perturbation: $\Sigma=\Sigma_0 + \epsilon \Sigma_1$, $\vecv = \vecv_0 + \epsilon \vecv_1$, $\phi=\phi_0 + \epsilon \phi_1$, where $\epsilon \ll 1$. Derive the perturbed equations by substituting these values of $\Sigma$, $\vecv$, and $\phi$ into the equations of motion and keeping all the terms that are linear in $\epsilon$.
+We wish to perform a stability analysis of these equations. Consider a solution $(\Sigma_0, \phi_0)$ to these equations in which the gas is in equilibrium (i.e., $\vecv=0$), and add a small perturbation: $\Sigma=\Sigma_0 + \epsilon \Sigma_1$, $\vecv = \vecv_0 + \epsilon \vecv_1$, $\phi=\phi_0 + \epsilon \phi_1$, where $\epsilon \ll 1$. Derive the perturbed equations by substituting these values of $\Sigma$, $\vecv$, and $\phi$ into the equations of motion and keeping all the terms that are linear in $\epsilon$.
 \item The perturbed equations can be solved by Fourier analysis. Consider a trial value of $\Sigma_1$ described by a single Fourier mode $\Sigma_1 = \Sigma_a \exp[i(kx - \omega t)]$, where we choose to orient our coordinate system so that the wave vector $\mathbf{k}$ for this mode is in the $x$ direction. As an {\it ansatz} for $\phi_1$, we will look for a solution of the form $\phi_1 = \phi_a \exp[i(kx - \omega t) - |k z|]$. (One can show that the solution must take this form, but we will not do so here.) Derive the relationship between $\phi_a$ and $\Sigma_a$.
 \item Now try a similar single-Fourier mode form for the perturbed velocity: $\vecv_1 = (v_{ax} \ehat_x + v_{ay} \ehat_y) \exp[i(kx - \omega t)]$. Derive three equations relating the unknowns $\Sigma_a$, $v_{ax}$, and $v_{ay}$. You will find it useful to expand $\Omega$ in a Taylor series around the origin of your coordinate system, i.e., write $\Omega = \Omega_0 + (d\Omega/dx)_0 x$, where $\Omega_0 = v_R/R$ and $(d\Omega/dx)_{0} = -\Omega_0/R$.
 \item Show that these equations have non-trivial solutions only if
