Significant re-arrangment: moved discussion of massive stars and first stars to after disks and protostellar evolution. Problems re-arranged to match new chapter ordering.

--- a/problems/probset5.tex
+++ b/problems/probset5.tex
@@ -2,14 +2,19 @@
 
 \begin{enumerate}
 
-\item {\bf A Simple Protostellar Evolution Model.}\\
-Consider a protostar forming with a constant accretion rate $\dot{M}$. The accreting gas is fully molecular, arrives at free-fall, and radiates away a luminosity $L_{\rm acc} = f_{\rm acc} G M \dot{M}/R$ at the accretion shock, where $M$ and $R$ are the instantaneous protostellar mass and radius, and $f_{\rm acc}$ is a numerical constant of order unity. At the end of contraction the resulting star is fully ionized, all its deuterium has been burned to hydrogen, and it is in hydrostatic equilibrium. The ionization potential of hydrogen is $\psi_I = 13.6$ eV per amu, the dissociation potential of molecular hydrogen is $\psi_M=2.2$ eV per amu, and the energy released by deuterium burning is $\psi_D\approx 100$ eV per amu of total gas (not per amu of deuterium).
+\item {\bf HII Region Trapping.}\\
+Consider a star of radius $R_*$ and mass $M_*$ with ionizing luminosity $S$ photons s$^{-1}$ at the center of a molecular cloud. For the purposes of this problem, assume that the ionized gas has constant sound speed $c_i=10$ km s$^{-1}$ and case B recombination coefficient $\alphab=2.6\times 10^{-13}$ cm$^{-3}$ s$^{-1}$.
 \begin{enumerate}
-\item First consider a low-mass protostar whose internal structure is well-described by an $n=3/2$ polytrope. Compute the total energy of the star, including thermal energy, gravitational energy, and the chemical energies associated with ionization, dissociation, and deuterium burning.
-\item Use your expression for the total energy to derive an evolution equation for the radius for a star. Assume the star is always on the Hayashi track, which for the purposes of this problem we will approximate as having a fixed effective temperature $T_{\rm H} = 3500$ K.
-\item Numerically integrate your equation and plot the radius as a function of mass for $\dot{M} = 10^{-5}$ $\msun$ yr$^{-1}$ and $f_{\rm acc}=3/4$. As an initial condition, use $R=2.5$ $\rsun$ and $M=0.01$ $\msun$, and stop the integration at a mass of $M=1.0$ $\msun$. Plot the radius and luminosity as a function of mass; in the luminosity, include both the the accretion luminosity and the internal luminosity produced by the star.
-\item Now consider two modifications we can make to allow the model to work for massive protostars. First, since massive stars are radiative, the polytropic index will be roughly $n=3$ rather than $n=3/2$. Second, the surface temperature will in general be larger than the Hayashi limit, so take the luminosity to be $L=\max[L_{\rm H}, \lsun(M/\msun)^3]$, where $L_{\rm H}=4\pi R^2 \sigma T_{\rm H}^4$ and $R$ is the stellar radius. Modify your evolution equation for the radius to include these effects, and numerically integrate the modified equations up to $M=50$ $\msun$ for $\dot{M} = 10^{-4}$ $\msun$ yr$^{-1}$ and $f_{\rm acc}=3/4$, using the same initial conditions as for the low mass case. Plot $R$ and $L$ versus $M$.
-\item Compare your result to the fitting formula for the ZAMS radius of solar-metallicity stars as a function of $M$ in \citet{tout96a}\footnote{\href{http://adsabs.harvard.edu/abs/1996MNRAS.281..257T}{Tout et al., 1996, MNRAS 281, 257}}. Find the mass at which the massive star would join the main sequence. Your plots for $R$ and $L$ are only valid up to this mass, because this simple model does not include hydrogen burning.
+\item Suppose the cloud is accreting onto the star at a constant rate $\dot{M}_*$. The incoming gas arrives at the free-fall velocity, and the accretion flow is spherical. Compute the equilibrium radius $r_i$ of the ionized region, and show that there is a critical value of $\dot{M}_*$ below which $r_i \gg R_*$. Estimate this value numerically for $M_*=30$ $\msun$ and $S=10^{49}$ s$^{-1}$. How does this compare to typical accretion rates for massive stars?
+\item The H~\textsc{ii} region will remain trapped by the accretion flow as long as the ionized gas sound speed is less than the escape velocity at the edge of the ionized region. What accretion rate is required to guarantee this? Again, estimate this numerically for the values given above.\\
+\end{enumerate}
+
+\item \textbf{The Transition to Grain-Mediated H$_2$ Formation.}\\
+In this problem we will make some rough estimates for how the Universe transitions from H$_2$ formation being mostly by gas-phase processes, as it must in the early Universe where there are no metals, to H$_2$ formation being mostly on grain surfaces. It may be helpful for this problem to review the discussion of H$_2$ formation in Section \ref{ssec:Hchemistry}.
+\begin{enumerate}
+\item As a first simple example, consider atomic gas with a temperature of $100$ K immersed in a background radiation field equal to that of the Milky Way; this radiation field causes photodetachment of H$^-$ at a rate $\zeta_{\rm pd} = 2.4\times 10^{-7}$ s$^{-1}$ per H$^-$. If all H is neutral and free electrons come only from metals, then the free electron density is $n_e \approx x_{\rm C} n_{\rm H} Z$, where $x_{\rm C} \approx 10^{-4}$ is the gas-phase carbon abundance (the dominant source of free electrons) and $Z$ is the metallicity relative to Solar. Similarly, if the dust grain abundance scales linearly with metallicity, the rate coefficient for H$_2$ formation on grains is $R = 3\times 10^{-17} Z$ cm$^3$ s$^{-1}$. Show that, under these assumptions, the rate of H$_2$ formation is always dominated by grain surface processes independent of the metallicity or density.
+\item Now suppose that the ionization fraction of H is non-negligible, and the photodetachment rate is the same as in part (a). Determine the ionization fraction $x$ at which the rates of H$_2$ formation in the gas phase and on grain surfaces become equal. Your answer should depend on the gas density $n_{\rm H}$, temperature $T$, and metallicity $Z$. Plot the solution for $x$ as a function of metallicity for gas at temperature $T=100$ K and density $n_{\rm H} = 1$, $10$, and $100$ cm$^{-3}$.
+\item In part (b), you should have found that, for a given density, there is a critical metallicity above which grain-mediated H$_2$ formation dominates regardless of the ionization fraction (except for the pathological case $x=1$). Solve for this critical metallicity as a function of density, and plot the result for $T = 100$ and $1000$ K.
 \end{enumerate}
 
 \item {\bf Disk Dispersal by Photoionization.}\\
