--- a/problems/probsol5.tex
+++ b/problems/probsol5.tex
@@ -2,173 +2,145 @@
 
 \begin{enumerate}
 
-\item {\bf A Simple Protostellar Evolution Model.}
+\item \textbf{HII Region Trapping.}
 
 \begin{enumerate}
 
-\item The star is a polytrope, and for a polytrope of index $n$ the gravitational energy is (e.g., see \citealt{kippenhahn94a})
+\item The density profile of the accretion flow is given implicitly by
 \begin{displaymath}
-\mathcal{W} = -\frac{3}{5-n} \frac{G M^2}{R}.
+\dot{M}_* = 4\pi r^2 \rho v_{\rm ff},
 \end{displaymath}
-The virial theorem tells us that the thermal energy is half the absolute value of the potential energy, so
+where $v_{\rm ff} = \sqrt{2 G M_*/r}$. Thus we have
 \begin{displaymath}
-\mathcal{T} = \frac{3}{2(5-n)} \frac{G M^2}{R}.
+\rho = \frac{\dot{M}_*}{4\pi \sqrt{2G M_*}} r^{-3/2}.
 \end{displaymath}
-Finally, the change in internal energy associated with dissociation, ionization, and deuterium burning is $(\psi_I  + \psi_M - \psi_D) M$. Note the opposite signs: $\psi_I$ and $\psi_M$ are positive, meaning that the final state (ionized, atomic) is higher energy than the initial one, while $\Psi_D$ is negative, indicating that the final state (all the deuterium converted to He) is a lower energy state than the initial one. Putting this all together, the total energy of the star is
+Recombinations happen in the region between $R_*$ and $r_i$. The recombination rate per unit volume is $\alpha_B n_e n_p = 1.1 \alpha_B (\rho/\mu_{\rm H})^2$, where $\mu_{\rm H} =2.3\times 10^{-24}$ g is the mass per H nucleus assuming standard composition. Thus the total recombination rate within the ionized volume is
+\begin{eqnarray*}
+\Gamma & = & \int_{R_*}^{r_i} 4\pi r^2 (1.1\alpha_B) \left(\frac{\dot{M}_*}{4\pi \mu_{\rm H} \sqrt{2G M_*}} r^{-3/2}\right)^2 \, dr \\
+& = & \frac{1.1\alpha_B \dot{M}_*^2}{8\pi \mu_{\rm H}^2 G M_*} \ln \frac{r_i}{R_*}.
+\end{eqnarray*}
+Since this must equal the ionizing photon production rate ($\Gamma = S$), we can solve for $r_i$:
 \begin{displaymath}
-\mathcal{E} = -\frac{3}{2(5-n)} \frac{G M^2}{R} + (\psi_I  + \psi_M - \psi_D) M.
+r_i = R_* \exp\left(\frac{8\pi \mu_{\rm H}^2 G M_* S}{1.1 \alpha_B \dot{M}_*^2}\right).
 \end{displaymath}
-
-\item First we can compute the time rate of change of the star's energy,
+The condition that $r_i \gg R_*$ is satisfied if the term inside parentheses is $\gtrsim 1$, which in turn requires
 \begin{displaymath}
-\dot{\mathcal{E}} = \frac{3}{2(5-n)} \frac{GM}{R} \left(M\frac{\dot{R}}{R} - 2\dot{M}\right) + (\psi_I + \psi_M-\psi_D) \dot{M}.
+\dot{M}_* \lesssim \left(\frac{8\pi \mu_{\rm H}^2 G M_* S}{1.1 \alpha_B}\right)^{1/2}.
 \end{displaymath}
-Now consider conservation of energy. The star's luminosity $L$ represents the rate of change of the energy "at infinity", i.e., the energy removed from the system. Since the total energy of the star plus infinity must remain constant, we require that $\dot{\mathcal{E}} + L = 0$. Writing down this condition and solving for $\dot{R}$, we obtain
+Plugging in the given values $M_* = 30$ $\msun$ and $S=10^{49}$ s$^{-1}$, we obtain $\dot{M}_* \lesssim 7\times 10^{-5}$ $\msun$ yr$^{-1}$. This is lower (though not by a huge amount) than the typical accretion rates inferred for massive stars.
+
+\item The escape velocity at a distance $r$ from the star is $v_{\rm esc} = \sqrt{2 G M_*/r}$. Thus the condition that $v_{\rm esc} < c_i$ at $r_i$ implies that
 \begin{displaymath}
-\dot{R} = 2 R \frac{\dot{M}}{M} - \frac{2(5-n)}{3} \frac{R^2}{G M^2}\left[(\psi_I+\psi_M-\psi_D) \dot{M}+L\right]
+\frac{2 G M_*}{c_i^2} <  r_i = R_* \exp\left(\frac{8\pi \mu_{\rm H}^2 G M_* S}{1.1 \alpha_B \dot{M}_*^2}\right).
 \end{displaymath}
-It is convenient to divide through by $\dot{M}$ in order to recast this as an equation for the evolution of $R$ with $M$:
+Solving for $\dot{M}_*$, we find
 \begin{displaymath}
-\frac{dR}{dM} = 2 \frac{R}{M} - \frac{2(5-n)}{3} \frac{R^2}{G M^2}\left(\psi_I+\psi_M-\psi_D+\frac{L}{\dot{M}}\right).
+\dot{M}_* > \left[\frac{8\pi \mu_{\rm H}^2 G M_* S}{2.2\alpha_B \ln(v_{\rm esc,*}/c_i)}\right]^{1/2},
 \end{displaymath}
-If we further divide by $R/M$ on both sides, we obtain
+where $v_{\rm esc,*} = \sqrt{2 G M_*/R_*}$ is the escape speed from the stellar surface. Using $R_*=7.7$ $\rsun$ (the radius of a 30 $\msun$ ZAMS star) and plugging in the other input values gives $\dot{M}_*>2.2\times 10^{-5}$ $\msun$.
+
+\end{enumerate}
+
+\item \textbf{The Transition to Grain-Mediated H$_2$ Formation}
+
+\begin{enumerate}
+
+\item To calculate the rate of H$_2$ formation catalyzed by free electrons, we first calculate the rate of formation of H$^-$:
 \begin{displaymath}
-\frac{d\ln R}{d\ln M} = 2 - \frac{2(5-n)}{3} \frac{R}{G M}\left(\psi_I+\psi_M-\psi_D+\frac{L}{\dot{M}}\right).
+\gamma({\rm H}^{-}\,{\rm form.}) = k_{-} n_e n_{\rm H} = k_{-} x_{\rm C} Z n_{\rm H}^2,
 \end{displaymath}
-Next, we must compute the total luminosity, which contains contributions from the star's intrinsic, internal luminosity, and from the accretion luminosity. Since the star is on the Hayashi track, we can compute the intrinsic luminosity by taking its effective temperature to be fixed at $T_H$. Thus the total luminosity is
+where $k_{-} = 1.1\times 10^{-16} T_2^{0.88}$ cm$^3$ s$^{-1}$ is the rate coefficient given in Chapter \ref{ch:first_stars}. Next we must calculate the fraction of H$^-$ ions formed that yield H$_2$. The H$^-$ can be destroyed either by photodetachment or by reacting with a neutral hydrogen to form H$_2$:
 \begin{displaymath}
-L = L_{\rm acc} + L_H = f_{\rm acc} \frac{G M \dot{M}}{R} + 4\pi R^2 \sigma T_H^4.
+{\rm H}^{-} + {\rm H} \rightarrow {\rm H}_2 + e^{-}.
 \end{displaymath}
-Substituting this in, we have
+The rate of the latter reaction is
 \begin{displaymath}
-\frac{d\ln R}{d\ln M} = 2 - \frac{2(5-n)}{3} \left[f_{\rm acc} + \left(\frac{R}{G M}\right)\left(\psi_I+\psi_M -\psi_D + \frac{4\pi R^2\sigma T_H^4}{\dot{M}}\right)\right].
+\gamma({\rm H}^{-}\rightarrow{\rm H}_2) = k_2 n_{{\rm H}^-} n_{\rm H}
 \end{displaymath}
-This is our final evolution equation.
+with $k_2 = 1.3\times 10^{-9}$ cm$^3$ s$^{-1}$ (the value given in class). The rate of photodetachment is
+\begin{displaymath}
+\gamma({\rm H}^{-}\,{\rm photo.}) = \zeta_{\rm pd} n_{{\rm H}^-}
+\end{displaymath}
+with $\zeta_{\rm pd} = 2.4\times 10^{-7}$ s$^{-1}$ for the Milky Way radiation field, again as given in class. Thus the branching ratio for H$^{-}$ going to H$_2$ rather than being destroyed by photodetachment is
+\begin{displaymath}
+\Gamma({\rm H}^{-}\rightarrow{\rm H}_2) = \frac{\gamma({\rm H}^{-}\rightarrow{\rm H}_2)}{\gamma({\rm H}^{-}\rightarrow{\rm H}_2) + \gamma({\rm H}^{-}\,{\rm photo.})} = \frac{k_2 n_{\rm H}}{k_2 n_{\rm H}+\zeta_{\rm pd}}
+\end{displaymath}
+Putting this together, the rate of formation of H$_2$ via free electrons is
+\begin{eqnarray*}
+\gamma({\rm H}_2{\rm - gas}) & = & \gamma({\rm H}^{-}\,{\rm form.}) \Gamma({\rm H}^{-}\rightarrow{\rm H}_2) \\
+& = & k_{-} x_{\rm C} Z  \left[1+ \zeta_{\rm pd}/(k_2 n_{\rm H})\right]^{-1} n_{\rm H}^2. 
+\end{eqnarray*}
+In comparison, the rate of H$_2$ formation on grain surfaces is simply
+\begin{displaymath}
+\gamma({\rm H}_2{\rm - grain}) = R n_{\rm H}^2 = R_{\odot} Z n_{\rm H}^2,
+\end{displaymath}
+where $R_{\odot} = 3\times 10^{-17}$ cm$^3$ s$^{-1}$ is the rate coefficient at Solar metallicity. Taking the ratio of these two, we have
+\begin{eqnarray*}
+\frac{\gamma({\rm H}_2{\rm - grain})}{\gamma({\rm H}_2{\rm - gas})} & = & \frac{R_{\odot} \left[1+ \zeta_{\rm pd}/(k_2 n_{\rm H})\right]}{k_{-} x_{\rm C}} \\
+& = & 2700 T_2^{-0.88} \left[1+ \zeta_{\rm pd}/(k_2 n_{\rm H})\right].
+\end{eqnarray*}
+Thus even in the limit $n_{\rm H} \rightarrow \infty$, the rate of formation on grain surfaces exceeds that in the gas phase by $\sim 3$ orders of magnitude. At densities below $\zeta_{\rm pd}/k_2 = 185$ cm$^{-3}$, where photodetachment significantly inhibits H$_2$ formation via the H$^-$ channel, grain formation wins by an even larger factor.\\
 
-\item The ODE can be integrated by standard techniques. Below is an example python program to do so, and plot the result:
-\begin{verbatim}
-import numpy as np
-import matplotlib.pyplot as plt
-from scipy.integrate import odeint
-
-# Define some constants in cgs
-G = 6.67e-8
-eV = 1.6e-12
-amu = 1.66e-24
-sigma = 5.67e-5
-Msun = 1.99e33
-Rsun = 6.96e10
-Lsun = 3.83e33
-yr = 365.25*24.*3600.
-
-# Problem parameters
-psiI = 13.6*eV/amu
-psiM = 2.2*eV/amu
-psiD = 100*eV/amu
-tH = 3500.0
-
-# Default parameters
-n = 1.5
-facc = 0.75
-Mdot = 1e-5*Msun/yr
-
-# Define the derivative function
-def dlnRdlnM(lnR, lnM, n=n, facc=facc, Mdot=Mdot):
-    R = np.exp(lnR)
-    M = np.exp(lnM)
-    return(2.0-2.0*(5.0-n)/3.0 *
-           (facc+(R/(G*M))*
-            (psiI+psiM-psiD+
-             4.0*np.pi*R**2*sigma*tH**4/Mdot)))
-
-# Integrate
-lnM = np.log(np.logspace(-2, 0, 500)*Msun)
-lnR = odeint(dlnRdlnM, np.log(2.5*Rsun), lnM,
-             args=(n, facc, Mdot))
-R = np.exp(lnR[:,0])
-M = np.exp(lnM)
-             
-# Get luminosity
-L = facc*G*M*Mdot/R + 4.0*np.pi*R**2*sigma*tH**4
-
-# Plot radius
-p1,=plt.plot(M/Msun, R/Rsun, 'b', lw=2)
-plt.xscale('log')
-plt.xlabel(r'$M/M_\odot$')
-plt.ylabel(r'$R/R_\odot$')
-
-# Plot luminosity
-plt.twinx()
-p2,=plt.plot(M/Msun, L/Lsun, 'r', lw=2)
-plt.ylabel(r'$L/L_\odot$')
-plt.legend([p1,p2], ['Radius', 'Luminosity'],
-           loc='lower right')
-\end{verbatim}
+\item For gas phase formation, this calculation is exactly the same as the previous part, with two minor differences. First, the factor $x_{\rm C} Z$ in the gas-phase formation rate is replaced by $x$, since how hydrogen rather than carbon is the dominant source of free electrons. Second, all the $n_{\rm H}$ factors become $(1-x) n_{\rm H}$, since only neutral hydrogen participates in the relevant reactions. Making these changes, the H$^-$ formation rate is
+\begin{displaymath}
+\gamma({\rm H}^{-}\,{\rm form.}) = k_{-} x (1-x) n_{\rm H}^2,
+\end{displaymath}
+and the H$^-$ to H$_2$ reaction rate is
+\begin{displaymath}
+\gamma({\rm H}^{-}\rightarrow{\rm H}_2) = k_2 (1-x) n_{{\rm H}^-} n_{\rm H}.
+\end{displaymath}
+The photodetachment rate is unchanged, so the branching ratio for H$^-$ going to H$_2$ becomes
+\begin{displaymath}
+\Gamma({\rm H}^{-}\rightarrow{\rm H}_2) = \frac{k_2 (1-x) n_{\rm H}}{k_2 (1-x) n_{\rm H}+\zeta_{\rm pd}},
+\end{displaymath}
+and the gas-phase H$_2$ formation rate is therefore
+\begin{displaymath}
+\gamma({\rm H}_2{\rm - gas}) = k_{-} x (1-x)  \left[1+ \zeta_{\rm pd}/(k_2 (1-x) n_{\rm H})\right]^{-1} n_{\rm H}^2. 
+\end{displaymath}
+The grain-mediated reaction rate becomes
+\begin{displaymath}
+\gamma({\rm H}_2{\rm - grain}) = R_{\odot} Z (1-x) n_{\rm H}^2.
+\end{displaymath}
+Notice that there is only one factor of $x$, because the reaction rate involves the collision of neutral hydrogen atoms with dust grains, and therefore depends on the density of gas times the density of grains. If the ionization fraction is $x$, the neutral hydrogen fraction is reduced by a factor $(1-x)$, but the grain abundance is unchanged. Setting the two rates equal, we have
+\begin{displaymath}
+k_{-} x \left[1+ \zeta_{\rm pd}/(k_2 (1-x) n_{\rm H})\right]^{-1} = R_{\odot} Z.
+\end{displaymath}
+This is a quadratic in $x$, and the solution is
+\begin{displaymath}
+x = \frac{1}{2}\left(1+k \pm \sqrt{1-2k + k^2 - 4 k/r_{\rm pd}}\right)
+\end{displaymath}
 \begin{marginfigure}
 \includegraphics[width=\linewidth]{hw5sol1}
 \caption[Solution to problem set~\thesolutionset, problem~\theenumi\theenumii]{
 \label{fig:hw5sol1}
-Radius (blue) and luminosity (red) for the simple protostellar evolution model.
+$x$ versus $Z$ for $n_{\rm H} = 1$, 10, and 100 cm$^{-3}$.
 }
 \end{marginfigure}
-The resulting output is shown as Figure \ref{fig:hw5sol1}. Note that the radius is too large by a factor of $\sim 3$ compared to more sophisticated models, mainly due to the incorrect assumption that all the accreted deuterium burns as quickly as it accretes. In reality the D luminosity should be significantly lower, because D burning lasts longer than accretion.
+where $k = R_{\odot} Z/k_{-}\approx 0.27 T_2^{-0.88} Z$ is the ratio of the rate coefficients for H$_2$ formation on grains and H$^-$ formation in the gas phase, and $r_{\rm pd} = n_{\rm H} k_2 / \zeta_{\rm pd}$ is the ratio of the gas density to the critical density for H$_2$ photodetachment, $n_{\rm crit,pd} = \zeta_{\rm pd}/k_2\approx 185$ cm$^{-3}$. Note that both roots represent mathematically valid solutions, one at ionization fraction below 50\% and one at ionization fraction above 50\%. In practice, however, the low ionization fraction solution is the more physically-realistic one, since if the gas is highly ionized the temperature is unlikely to be low enough to allow formation of H$_2$. Figure \ref{fig:hw5sol1} shows the physically-realistic solution plotted for $n_{\rm H} = 1$, 10, and 100 cm$^{-3}$.
 
-\item This problem can be solved using the same basic structure as the previous part. The derivative of radius with respect to mass now becomes
-\begin{eqnarray*}
-\frac{d\ln R}{d\ln M} & = & 2 - \frac{2(5-n)}{3} \left[f_{\rm acc} + \left(\frac{R}{G M}\right) \cdot \right.
-\\
-& & \qquad \left.\left(\psi_I+\psi_M -\psi_D + \frac{\max[4\pi R^2\sigma T_H^4, \lsun (M/\msun)^3]}{\dot{M}}\right)\right].
-\end{eqnarray*}
-This can be integrated via a simple python program as in the previous part:
-\begin{verbatim}
-# Define the derivative function for the second part
-def dlnRdlnM2(lnR, lnM, n=n, facc=facc, Mdot=Mdot):
-    R = np.exp(lnR)
-    M = np.exp(lnM)
-    LH = 4.0*np.pi*R**2*sigma*tH**4
-    Lstar = Lsun*(M/Msun)**3
-    return(2.0-2.0*(5.0-n)/3.0 *
-           (facc+(R/(G*M))*
-            (psiI+psiM-psiD+np.maximum(Lstar,LH)/Mdot)))
-
-# Integrate
-Mdot2 = 1.0e-4*Msun/yr
-lnM2 = np.log(np.logspace(-2, np.log10(50), 500)*Msun)
-lnR2 = odeint(dlnRdlnM2, np.log(2.5*Rsun), lnM2,
-              args=(3.0, facc, Mdot2))
-R2 = np.exp(lnR2[:,0])
-M2 = np.exp(lnM2)
-
-# Get luminosity
-L2 = facc*G*M*Mdot/R + np.maximum(
-    4.0*np.pi*R2**2*sigma*tH**4,
-    Lsun*(M2/Msun)**3)
-
-# Plot radius
-clf()
-p1,=plt.plot(M2/Msun, R2/Rsun, 'b', lw=2)
-plt.xlabel(r'$M/M_\odot$')
-plt.ylabel(r'$R/R_\odot$')
-
-# Plot luminosity
-plt.twinx()
-p2,=plt.plot(M2/Msun, L2/Lsun, 'r', lw=2)
-plt.ylabel(r'$L/L_\odot$')
-plt.yscale('log')
-plt.xlim([0,50])
-plt.legend([p1,p2], ['Radius', 'Luminosity'], 
-           loc='center right')
-\end{verbatim}
+\item A solution ceases to exist when the metallicity is such that the quantity under the square root in the equation from the previous part goes to zero. Thus, grain-mediated H$_2$ formation must dominate whenever
+\begin{displaymath}
+1 - 2k + k^2 - 4 k r_{\rm pd}^{-1} < 0.
+\end{displaymath}
+Solving, this condition reduces to
+\begin{displaymath}
+k > 1 + \frac{2}{r_{\rm pd}} \left(1 - \sqrt{1+r_{\rm pd}}\right).
+\end{displaymath}
+(Note: there is another root to this equation, with a $+$ instead of a $-$ in front of the square root. However, one can easily verify that in the vicinity of this root $x>1$, which is obviously unphysical. Thus the $-$ root is the physically realistic one.) Rewriting this in terms of dimensional quantities, this is
 \begin{marginfigure}
 \includegraphics[width=\linewidth]{hw5sol2}
 \caption[Solution to problem set~\thesolutionset, problem~\theenumi\theenumii]{
 \label{fig:hw5sol2}
-Radius (blue) and luminosity (red) for the simple protostellar evolution model for a massive star.
+$Z$ versus $n_{\rm H}$ at $T=100$ K and $1000$ K.
 }
 \end{marginfigure}
-The resulting output is shown as Figure \ref{fig:hw5sol2}.
+\begin{displaymath}
+Z > 0.27 T_2^{0.88} \left[1 + \frac{2 n_{\rm crit,pd}}{n_{\rm H}} \left(1 - \sqrt{1+\frac{n_{\rm H}}{n_{\rm crit,pd}}}\right)\right].
+\end{displaymath}
+Figure \ref{fig:hw5sol2} shows a plot of the minimum value of $Z$ versus density $n_{\rm H}$ at $T=100$ K and 1000 K.
 
 \end{enumerate}
+
 
 \item {\bf Disk Dispersal by Photoionization.}
 
