Revisions complete through chapter 19.

--- a/problems/probsol3.tex
+++ b/problems/probsol3.tex
@@ -160,7 +160,7 @@ Plugging in the given values of $c_s$ and $\Sigma_0$, we obtain $M_T = 2.3\times
 
 \end{enumerate}
 
-\item \textbf{The Origin of Brown Dwarfs.}
+\item \textbf{The Origin of Brown Dwarfs.}\footnote{This problem has primarily inspired by \citet{padoan04a}.}
 
 \begin{enumerate}
 
