--- a/problems/probsol5.tex
+++ b/problems/probsol5.tex
@@ -41,7 +41,7 @@ where $v_{\rm esc,*} = \sqrt{2 G M_*/R_*}$ is the escape speed from the stellar 
 
 \end{enumerate}
 
-\item \textbf{The Transition to Grain-Mediated H$_2$ Formation}
+\item \textbf{The Transition to Grain-Mediated H$_2$ Formation}\footnote{This problem was primarily inspired by \citet{glover03a}.}
 
 \begin{enumerate}
 
